@@ -57,7 +57,8 @@ if($user)
 $ui=new MainUI();
 $ui->setToolContent($tool_html);
 $smarty->assign("title", _("User Profile"));
-$ui->setMainContent($body_html);
+//TODO: Write User profiles
+//$ui->setMainContent($body_html);
 $ui->display();
 
 ?>
